packages/anitomy/src/anitomy.h

extern "C" void *get_anitomy(char *str);
extern "C" void destroy_anitomy (void *ptr);
extern "C" char *get_title (void *ptr);
extern "C" char *get_episode (void *ptr);
extern "C" char *get_release_group (void *ptr);
extern "C" char *get_season (void *ptr);